concord_macros/tests/dsl/fail/fail_generated_local_vars_in_policy_expr.stderr
error: generated implementation local `vars` is not part of the public DSL expression scope
  --> tests/dsl/fail/fail_generated_local_vars_in_policy_expr.rs:12:37
   |
12 |     header "X-Leak" = format!("{}", vars.token)
   |                                     ^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_generated_local_vars_in_policy_expr.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
